--- a/package.json
+++ b/package.json
@@ -17,21 +17,25 @@
   },
   "license": "MIT",
   "dependencies": {
-    "lodash": "*",
-    "hiredis": "*",
-    "p-promise": "*"
+    "lodash": "~1.2.1",
+    "hiredis": "~0.1.15",
+    "p-promise": "~0.2.4"
   },
   "devDependencies": {
-    "mocha-as-promised": "*",
-    "chai-as-promised": "*",
-    "semver": "*",
-    "blanket": "*"
+    "mocha-as-promised": "~1.3.0",
+    "chai-as-promised": "~3.3.1",
+    "semver": "~1.1.4",
+    "blanket": "~1.1.4",
+    "travis-cov": "~0.2.4"
   },
   "scripts": {
     "test": "make test && make test-cov",
     "blanket": {
       "pattern": "//^((?!/node_modules|test|examples/).)*$/ig",
       "onlyCwd": true
+    },
+    "travis-cov": {
+      "threshold": 90
     }
   }
 }
